Release history for Dist-Zilla-App-Command-critic

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: ↓1 (recommends: ↑1)
 - develop: +8 ↑2 -3 (suggests: +2 -1)
 - test: +1 -3 (recommends: ↑3 -1)

 [Meta]
 - Move to KENTNL github org.
 - Author = kentnl@cpan

 [Packaging]
 - no code changes.
 - Packaging cleaned up a bit

0.001001 2014-04-13T01:46:56Z
 [Bugfix]
 - Include bin and script in all_perl_files search roots. I'm not sure how Test::Perl::Critic seems to do this.

0.001000 2014-04-12T23:42:06Z
 - First version.

 [Dependencies::Aggregate]
 - 5.008: 216
 - 5.010: 196
 - 5.019: 175
