@@ -5,15 +5,17 @@ Release history for Dist-Zilla-App-Command-critic
  - Dependencies changed since 0.001001, see misc/*.deps* for details
  - configure: ↓1 (recommends: ↑1)
  - develop: +8 ↑2 -3 (suggests: +2 -1)
- - test: +1 -3 (recommends: ↑3 -1)
+ - test: +5 -3 (recommends: ↑3 -1)
 
  [Meta]
  - Move to KENTNL github org.
  - Author = kentnl@cpan
 
  [Packaging]
- - no code changes.
  - Packaging cleaned up a bit
+
+ [Tests]
+ - Basic behaviour tests added
 
 0.001001 2014-04-13T01:46:56Z
  [Bugfix]
